--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -1,60 +1,76 @@
 .container {
+  display: flex; 
+  flex-direction: column-reverse;
+  padding: 10px; 
+  }
+
+@media screen and (min-width: 600px) {
+  .container {
     display: grid;
     grid-template-columns: 2fr 1fr;
     max-width: 960px;
     margin: 60px auto;
   }
-.content {
+  .content {
     padding-right: 30px;
   }
   .sidebar {
     padding-left: 30px;
   }
-  .sidebar form {
-    padding: 20px;
-    background: #1f9751;
-    border-radius: 10px;
-  }
-  .sidebar input, .sidebar select {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    margin-top: 8px;
-    box-sizing: border-box;
-    border: 0;
-    border-radius: 4px;
-    color: #555;
-    font-size: 1em;
-  }
-  .sidebar label {
-    margin: 0 auto 20px;
-    display: block;
-    color: #fff;
-  }
-  .sidebar button {
-    color: #fff;
-    border: 2px solid #fff;
-    padding: 6px 12px;
-    background-color: transparent;
-    font-size: 1em;
-    border-radius: 4px;
-    cursor: pointer;
-    display: block;
-    width: 100%;
-  }
-  .sidebar h3 {
-    color: #1f9751;
-    margin-bottom: 20px;
-  }
-  .sidebar aside {
-    margin-top: 40px;
-    color: #555;
-  }
-  .sidebar aside li {
-    margin: 10px;
-  }
+}
 
-  /* transactions */
+.sidebar form {
+  padding: 20px;
+  background: #1f9751;
+  border-radius: 10px;
+}
+.sidebar input, .sidebar select {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  margin-top: 8px;
+  box-sizing: border-box;
+  border: 0;
+  border-radius: 4px;
+  color: #555;
+  font-size: 1em;
+}
+.sidebar label {
+  margin: 0 auto 20px;
+  display: block;
+  color: #fff;
+}
+.sidebar button {
+  color: #fff;
+  border: 2px solid #fff;
+  padding: 6px 12px;
+  background-color: transparent;
+  font-size: 1em;
+  border-radius: 4px;
+  cursor: pointer;
+  display: block;
+  width: 100%;
+}
+
+.sidebar button:hover {
+  background-color: white;
+  color: #555;
+ 
+}
+
+.sidebar h3 {
+  color: #1f9751;
+  margin-bottom: 20px;
+}
+.sidebar aside {
+  margin-top: 40px;
+  color: #555;
+}
+.sidebar aside li {
+  margin: 10px;
+}
+
+/* transactions */
 .transactions li {
   margin: 30px auto;
   border: 1px solid #f2f2f2;
@@ -65,6 +81,11 @@
   position: relative;
   overflow: hidden;
   border-left: 4px solid #1f9751;
+  transition: transform 0.2s ease-in-out;
+}
+
+.transactions li:hover {
+  transform: scale(105%);
 }
 .transactions .name {
   color: #777;
@@ -89,4 +110,4 @@
   line-height: 0;
   font-size: 0.9em;
   cursor: pointer;
-  }
+}
